# real_estate

./: .gitignore  LICENSE  Makefile  README.md  cian_crawler.py  pyproject.toml
.dvc/: .gitignore  config
data/interim/X/: .gitignore  X_test.csv.dvc  X_train.csv.dvc  test_X.csv.dvc  test_X_scaled.csv.dvc  train_X.csv.dvc  train_X_scaled.csv.dvc
data/interim/Y/: .gitignore  test_y.csv.dvc  train_y.csv  train_y.csv.dvc  y_test.csv  y_test.csv.dvc  y_train.csv  y_train.csv.dvc
data/interim/binary_form/: .gitignore  binary_format_test.csv  binary_format_test.csv.dvc  binary_format_train.csv  binary_format_train.csv.dvc
data/interim/cleaned_outliers/: .gitignore  cleaned_outliers_test.csv  cleaned_outliers_test.csv.dvc  cleaned_outliers_train.csv.dvc
data/interim/dropped_vals/: .gitignore  dropped_values_test.csv  dropped_values_test.csv.dvc  dropped_values_train.csv  dropped_values_train.csv.dvc
data/interim/encoding/: .gitignore  encoding_test.csv.dvc  (+1 more)
data/processed/: X_test.csv.dvc  X_train.csv.dvc  y_test.csv  y_test.csv.dvc  y_train.csv  y_train.csv.dvc
data/raw/: .gitignore  real_estate.csv  real_estate.csv.dvc  real_estate_test.csv  real_estate_test.csv.dvc  real_estate_train.csv  real_estate_train.csv.dvc
mlruns/0/: meta.yaml
mlruns/232591210952694755/: meta.yaml
mlruns/251494324876329964/: meta.yaml
mlruns/644686172249741453/: meta.yaml
models/: .gitignore  baseline_model.pkl.dvc
notebooks/: Baseline.ipynb  train_test_split.ipynb
src/data/: cian_crawler.py
src/models/: optuna_mlflow.py  predict_model.py  track_model.py  train_model.py
(+1088 files in other folders)
